Header UI, Button UI Changes done.

--- a/src/UI/Blazor/Modules/ChangePassword/Components/ChangePassword.razor
+++ b/src/UI/Blazor/Modules/ChangePassword/Components/ChangePassword.razor
@@ -39,7 +39,7 @@
                                     <ValidationMessage For="@(() => ChangePasswordRequest.ConfirmPassword)" />
                                 </div>
                                 <div class="mt-3 sm:col-span-2">
-                                    <button type="submit" class="btn btn-primary w-full">Change Password</button>
+                                    <button type="submit" class="btn btn-primary">Change Password</button>
                                 </div>
                             </div>
                         </div>
