--- a/src/UI/Blazor/Modules/Task/Components/Task.razor
+++ b/src/UI/Blazor/Modules/Task/Components/Task.razor
@@ -20,7 +20,12 @@
 @attribute [Authorize]
 @inject IJSRuntime JSRuntime
 @inject IModalService ModalService
-
+<style>
+    .bm-title{
+        font-weight: 600 !important;
+        font-size: 1.125rem !important;
+    }
+</style>
 <div class="panel h-full w-full">
     <div class="mb-5 flex items-center justify-between">
         <h5 class="text-lg font-semibold dark:text-white-light">Tasks</h5>
