--- a/src/UI/Blazor/Modules/User/Components/Update-profile.razor
+++ b/src/UI/Blazor/Modules/User/Components/Update-profile.razor
@@ -22,7 +22,7 @@
                 <a href="javascript:;" class="text-primary hover:underline">Users</a>
             </li>
             <li class="before:content-['/'] ltr:before:mr-1 rtl:before:ml-1">
-                <span>Account Settings</span>
+                <span>Update Profile</span>
             </li>
         </ul>
         <div class="pt-5">
@@ -54,7 +54,7 @@
                                     <ValidationMessage For="@(() => UpdateProfile.Email)" />
                                 </div>
                                 <div class="mt-3 sm:col-span-2">
-                                    <button type="submit" class="btn btn-primary w-full">Update Profile</button>
+                                    <button type="submit" class="btn btn-primary">Update Profile</button>
                                 </div>
                             </div>
                         </div>
