Country lang hide

--- a/src/UI/Blazor/Layout/Public/Header.razor
+++ b/src/UI/Blazor/Layout/Public/Header.razor
@@ -92,7 +92,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="dropdown shrink-0" x-data="dropdown">
+                @* <div class="dropdown shrink-0" x-data="dropdown">
                     <a href="javascript:;"
                        class="block rounded-full bg-white-light/40 p-2 hover:bg-white-light/90 hover:text-primary dark:bg-dark/40 dark:hover:bg-dark/60"
                        @click="toggle">
@@ -119,7 +119,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>
+                </div> *@
                 <div class="dropdown flex-shrink-0" x-data="dropdown">
                     <a href="javascript:;" class="group relative" @click="toggle()">
                         <span>
