--- a/src/UI/Blazor/Layout/Public/Header.razor
+++ b/src/UI/Blazor/Layout/Public/Header.razor
@@ -121,101 +121,101 @@
                     </ul>
                 </div> *@
                 <div class="dropdown flex-shrink-0" x-data="dropdown">
-                    <a href="javascript:;" class="group relative" @click="toggle()">
+                    <a href="javascript:;" class="group relative" @onclick="() => ToggleDropdown(!IsDropdownOpen)">
                         <span>
                             <img class="h-9 w-9 rounded-full object-cover saturate-50 group-hover:saturate-100"
                                  src="assets/images/user-profile.jpeg"
                                  alt="image" />
                         </span>
                     </a>
-                    <ul x-cloak
-                        x-show="open"
-                        x-transition
-                        x-transition.duration.300ms
+                    @if (IsDropdownOpen)
+                    {
+                        <ul 
                         class="top-11 w-[230px] !py-0 font-semibold text-dark ltr:right-0 rtl:left-0 dark:text-white-dark dark:text-white-light/90">
-                        <li>
-                            <div class="flex items-center px-4 py-4">
-                                <div class="flex-none">
-                                    <img class="h-10 w-10 rounded-md object-cover" src="assets/images/user-profile.jpeg" alt="image" />
+                            <li>
+                                <div class="flex items-center px-4 py-4">
+                                    <div class="flex-none">
+                                        <img class="h-10 w-10 rounded-md object-cover" src="assets/images/user-profile.jpeg" alt="image" />
+                                    </div>
+                                    <div class="truncate ltr:pl-4 rtl:pr-4">
+                                        <h4 class="text-base">
+                                            @name
+                                        </h4>
+                                        <a class="text-black/60 hover:text-primary dark:text-dark-light/60 dark:hover:text-white" href="javascript:;">
+                                            @email
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="truncate ltr:pl-4 rtl:pr-4">
-                                    <h4 class="text-base">
-                                        @name
-                                    </h4>
-                                    <a class="text-black/60 hover:text-primary dark:text-dark-light/60 dark:hover:text-white" href="javascript:;">
-                                        @email
-                                    </a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="/update-profile" class="dark:hover:text-white" @click="toggle">
-                                <svg class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
-                                     width="18"
-                                     height="18"
-                                     viewBox="0 0 24 24"
-                                     fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="12" cy="6" r="4" stroke="currentColor" stroke-width="1.5" />
-                                    <path opacity="0.5"
-                                          d="M20 17.5C20 19.9853 20 22 12 22C4 22 4 19.9853 4 17.5C4 15.0147 7.58172 13 12 13C16.4183 13 20 15.0147 20 17.5Z"
-                                          stroke="currentColor"
-                                          stroke-width="1.5" />
-                                </svg>
-                                Update Profile
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/ChangePassword" class="dark:hover:text-white" @click="toggle">
-                                <svg class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
-                                     width="18"
-                                     height="18"
-                                     viewBox="0 0 24 24"
-                                     fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M2 16C2 13.1716 2 11.7574 2.87868 10.8787C3.75736 10 5.17157 10 8 10H16C18.8284 10 20.2426 10 21.1213 10.8787C22 11.7574 22 13.1716 22 16C22 18.8284 22 20.2426 21.1213 21.1213C20.2426 22 18.8284 22 16 22H8C5.17157 22 3.75736 22 2.87868 21.1213C2 20.2426 2 18.8284 2 16Z"
-                                          stroke="currentColor"
-                                          stroke-width="1.5" />
-                                    <path opacity="0.5"
-                                          d="M6 10V8C6 4.68629 8.68629 2 12 2C15.3137 2 18 4.68629 18 8V10"
-                                          stroke="currentColor"
-                                          stroke-width="1.5"
-                                          stroke-linecap="round" />
-                                    <g opacity="0.5">
-                                        <path d="M9 16C9 16.5523 8.55228 17 8 17C7.44772 17 7 16.5523 7 16C7 15.4477 7.44772 15 8 15C8.55228 15 9 15.4477 9 16Z"
-                                              fill="currentColor" />
-                                        <path d="M13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16Z"
-                                              fill="currentColor" />
-                                        <path d="M17 16C17 16.5523 16.5523 17 16 17C15.4477 17 15 16.5523 15 16C15 15.4477 15.4477 15 16 15C16.5523 15 17 15.4477 17 16Z"
-                                              fill="currentColor" />
-                                    </g>
-                                </svg>
-                                Change Password
-                            </a>
-                        </li>
-                        <li class="border-t border-white-light dark:border-white-light/10" role="button">
-                            <a class="!py-3 text-danger" @onclick="SignOut">
-                                <svg class="h-4.5 w-4.5 shrink-0 rotate-90 ltr:mr-2 rtl:ml-2"
-                                     width="18"
-                                     height="18"
-                                     viewBox="0 0 24 24"
-                                     fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path opacity="0.5"
-                                          d="M17 9.00195C19.175 9.01406 20.3529 9.11051 21.1213 9.8789C22 10.7576 22 12.1718 22 15.0002V16.0002C22 18.8286 22 20.2429 21.1213 21.1215C20.2426 22.0002 18.8284 22.0002 16 22.0002H8C5.17157 22.0002 3.75736 22.0002 2.87868 21.1215C2 20.2429 2 18.8286 2 16.0002L2 15.0002C2 12.1718 2 10.7576 2.87868 9.87889C3.64706 9.11051 4.82497 9.01406 7 9.00195"
-                                          stroke="currentColor"
-                                          stroke-width="1.5"
-                                          stroke-linecap="round" />
-                                    <path d="M12 15L12 2M12 2L15 5.5M12 2L9 5.5"
-                                          stroke="currentColor"
-                                          stroke-width="1.5"
-                                          stroke-linecap="round"
-                                          stroke-linejoin="round" />
-                                </svg>
-                                Sign Out
-                            </a>
-                        </li>
-                    </ul>
+                            </li>
+                            <li>
+                                <a href="/update-profile" class="dark:hover:text-white" @click="toggle">
+                                    <svg class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
+                                    width="18"
+                                    height="18"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="12" cy="6" r="4" stroke="currentColor" stroke-width="1.5" />
+                                        <path opacity="0.5"
+                                        d="M20 17.5C20 19.9853 20 22 12 22C4 22 4 19.9853 4 17.5C4 15.0147 7.58172 13 12 13C16.4183 13 20 15.0147 20 17.5Z"
+                                        stroke="currentColor"
+                                        stroke-width="1.5" />
+                                    </svg>
+                                    Update Profile
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/ChangePassword" class="dark:hover:text-white" @click="toggle">
+                                    <svg class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
+                                    width="18"
+                                    height="18"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2 16C2 13.1716 2 11.7574 2.87868 10.8787C3.75736 10 5.17157 10 8 10H16C18.8284 10 20.2426 10 21.1213 10.8787C22 11.7574 22 13.1716 22 16C22 18.8284 22 20.2426 21.1213 21.1213C20.2426 22 18.8284 22 16 22H8C5.17157 22 3.75736 22 2.87868 21.1213C2 20.2426 2 18.8284 2 16Z"
+                                        stroke="currentColor"
+                                        stroke-width="1.5" />
+                                        <path opacity="0.5"
+                                        d="M6 10V8C6 4.68629 8.68629 2 12 2C15.3137 2 18 4.68629 18 8V10"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round" />
+                                        <g opacity="0.5">
+                                            <path d="M9 16C9 16.5523 8.55228 17 8 17C7.44772 17 7 16.5523 7 16C7 15.4477 7.44772 15 8 15C8.55228 15 9 15.4477 9 16Z"
+                                            fill="currentColor" />
+                                            <path d="M13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16Z"
+                                            fill="currentColor" />
+                                            <path d="M17 16C17 16.5523 16.5523 17 16 17C15.4477 17 15 16.5523 15 16C15 15.4477 15.4477 15 16 15C16.5523 15 17 15.4477 17 16Z"
+                                            fill="currentColor" />
+                                        </g>
+                                    </svg>
+                                    Change Password
+                                </a>
+                            </li>
+                            <li class="border-t border-white-light dark:border-white-light/10" role="button">
+                                <a class="!py-3 text-danger" @onclick="SignOut">
+                                    <svg class="h-4.5 w-4.5 shrink-0 rotate-90 ltr:mr-2 rtl:ml-2"
+                                    width="18"
+                                    height="18"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                        <path opacity="0.5"
+                                        d="M17 9.00195C19.175 9.01406 20.3529 9.11051 21.1213 9.8789C22 10.7576 22 12.1718 22 15.0002V16.0002C22 18.8286 22 20.2429 21.1213 21.1215C20.2426 22.0002 18.8284 22.0002 16 22.0002H8C5.17157 22.0002 3.75736 22.0002 2.87868 21.1215C2 20.2429 2 18.8286 2 16.0002L2 15.0002C2 12.1718 2 10.7576 2.87868 9.87889C3.64706 9.11051 4.82497 9.01406 7 9.00195"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round" />
+                                        <path d="M12 15L12 2M12 2L15 5.5M12 2L9 5.5"
+                                        stroke="currentColor"
+                                        stroke-width="1.5"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    </svg>
+                                    Sign Out
+                                </a>
+                            </li>
+                        </ul>
+                    }
                 </div>
             </div>
         </div>
@@ -280,6 +280,9 @@
 @code{
     private string email;
     private string name;
+    public bool IsDropdownOpen { get; set; }
+    public bool IsDropdownOpenEnd { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         email = await _localStorageService.GetItemAsStringAsync("email");
@@ -291,5 +294,12 @@
         await _stateProvider.MarkAsLoggedOut();
          _auth.Logout();
         navigationManager.NavigateTo("/");
+    }
+
+    public async  void ToggleDropdown(bool show = false)
+    {
+        IsDropdownOpen = show;
+        IsDropdownOpenEnd = !show;
+       await  InvokeAsync(StateHasChanged);
     }
 }
