ForgotPassWord And ResetPassword Changes

--- a/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
+++ b/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
@@ -11,21 +11,24 @@
     <div class="flex min-h-screen items-center justify-center bg-[url('../images/map.svg')] bg-cover bg-center dark:bg-[url('../images/map-dark.svg')]">
         <div class="panel m-6 w-full max-w-lg sm:w-[480px]">
             <h2 class="mb-3 text-2xl font-bold">Forgot Password</h2>
-            <p class="mb-7">Enter your email to recover your Password</p>
-            <form class="space-y-5" @onsubmit="SendForgotPasswordRequest">
+            <p class="mb-7">Enter your registered email to recover your Password</p>
+            <EditForm Model="@forgotPassword" OnValidSubmit="SendForgotPasswordRequest">
+                <DataAnnotationsValidator />
+
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" @bind-value="Email" type="email" class="form-input" placeholder="Enter Email" />
-
+                    <InputText id="email" @bind-Value="forgotPassword.Email" class="form-input" placeholder="Enter Email" />
+                    <ValidationMessage For="@(() => forgotPassword.Email)" />
                 </div>
-                <div>
+
+                <div class="mt-4">
                     <button type="submit" class="btn btn-primary w-full">Send Request</button>
                 </div>
 
-                <p class="text-right">
+                <p class="text-right mt-2">
                     <a href="/" class="font-bold text-primary hover:underline">Back To Login</a>
                 </p>
-            </form>
+            </EditForm>
         </div>
     </div>
 
@@ -34,31 +37,29 @@
 {
     private string Email;
     private ForgotPasswordDto forgotPassword = new ForgotPasswordDto();
-
-    private async Task SendForgotPasswordRequest()
-    {
-        var forgotPassword = new ForgotPasswordDto
-            {
-                Email = Email
-            };
-        try
-        {
-
-            var result = await passwordservice.ForgotPasswordAsync(forgotPassword);
-
-            Console.WriteLine($"Mail Send Successfully  {forgotPassword}");
-            await JSRuntime.InvokeVoidAsync("showSuccessAlert");
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine(ex.Message);
-            await JSRuntime.InvokeVoidAsync("showErrorAlert", ex.Message);
-        }
-    }
-
     [Inject]
     private IForgotPasswordService passwordservice { get; set; }
 
+    private async Task SendForgotPasswordRequest()
+    {
+
+        try
+        {
+            var result = await passwordservice.ForgotPasswordAsync(forgotPassword);
+            if (result.Success)
+            {
+                await JSRuntime.InvokeVoidAsync("showSuccessAlert");
+            }
+            else
+            {
+                await JSRuntime.InvokeVoidAsync("showErrorAlert", string.Join(", ", result.Messages));
+            }
+        }
+        catch (Exception ex)
+        {
+            await JSRuntime.InvokeVoidAsync("showErrorAlert", ex.Message);
+        }
+    }
 }
 <script>
     function showSuccessAlert() {
@@ -73,7 +74,7 @@
         new window.Swal({
             icon: 'error',
             title: 'Error!',
-            text: 'Failed to send reset link',
+            text: 'Please enter registered email',
             padding: '2em',
         });
     }
