--- a/src/UI/Blazor/Modules/ResetPassword/Pages/ResetPassword.razor
+++ b/src/UI/Blazor/Modules/ResetPassword/Pages/ResetPassword.razor
@@ -5,15 +5,17 @@
 @using Starter.Blazor.Modules.ResetPassword.Services
 @using Starter.Blazor.Modules.Projects.Models
 @inject NavigationManager Navigation
-
+@inject IJSRuntime JSRuntime
 <EditForm Model="@resetPassword" OnValidSubmit="SendResetPassword">
     <DataAnnotationsValidator />
+
     <div class="main-container min-h-screen text-black dark:text-white-dark">
         <div class="flex min-h-screen items-center justify-center bg-[url('../images/map.svg')] bg-cover bg-center dark:bg-[url('../images/map-dark.svg')]">
             <div class="panel m-6 w-full max-w-lg sm:w-[480px]">
                 <h2 class="mb-3 text-2xl font-bold">Reset Password</h2>
                 <p class="mb-7">Enter your New Password</p>
-
+                <input type="hidden" @bind="resetPassword.Email" />
+                <input type="hidden" @bind="resetPassword.Token" />
                 <div>
                     <label for="newpass">Enter New Password</label>
                     <input id="newpass" @bind="resetPassword.NewPassword" type="password" class="form-input" placeholder="Enter new Password" />
@@ -21,7 +23,7 @@
                 </div>
                 <div>
                     <label for="confpass">Confirm Password</label>
-                    <input id="confpass" @bind="confirmPassword" type="password" class="form-input" placeholder="Confirm password" />
+                    <input id="confpass" @bind="resetPassword.ConfirmPassword" type="password" class="form-input" placeholder="Confirm password" />
                     <ValidationMessage For="@(() => resetPassword.ConfirmPassword)" />
                 </div>
 
@@ -45,22 +47,25 @@
     private string confirmPassword;
     private ResetPasswordDto resetPassword = new ResetPasswordDto();
 
+    [Inject]
+    private IResetPasswordService resetPasswordService { get; set; }
+
     protected override void OnInitialized()
     {
         var uri = new Uri(Navigation.Uri);
-        var emailEncoded = uri.Query.Split("&").FirstOrDefault(param => param.Contains("email"));
-        var tokenEncoded = uri.Query.Split("&").FirstOrDefault(param => param.Contains("token"));
+        resetPassword.Email = uri.Query.Split("&").FirstOrDefault(param => param.Contains("email"));
+        resetPassword.Token = uri.Query.Split("&").FirstOrDefault(param => param.Contains("token"));
 
-        if (!string.IsNullOrEmpty(emailEncoded))
+        if (!string.IsNullOrEmpty(resetPassword.Email))
         {
-            email = Uri.UnescapeDataString(emailEncoded.Split("=")[1]);
+            resetPassword.Email = Uri.UnescapeDataString(resetPassword.Email.Split("=")[1]);
         }
 
-        if (!string.IsNullOrEmpty(tokenEncoded))
+        if (!string.IsNullOrEmpty(resetPassword.Token))
         {
 
-            var tokenParam = Navigation.ToAbsoluteUri(Navigation.Uri).Query.Split("&").FirstOrDefault(param => param.Contains("token"));
-            token = Uri.UnescapeDataString(tokenParam?.Split("=")[1]);
+            //var tokenParam = Navigation.ToAbsoluteUri(Navigation.Uri).Query.Split("&").FirstOrDefault(param => param.Contains("token"));
+            resetPassword.Token = Uri.UnescapeDataString(resetPassword.Token?.Split("=")[1]);
         }
     }
 
@@ -68,16 +73,16 @@
     {
         try
         {
-            if (newPassword != confirmPassword)
-            {
-                Console.WriteLine("Passwords do not match");
-                return;
-            }
-            resetPassword.Email = email;
-            resetPassword.Token = token;
-            resetPassword.NewPassword = newPassword;
             var result = await resetPasswordService.ResetPasswordAsync(resetPassword);
-            Console.WriteLine("Password Changed Successfully");
+            if (result.Success)
+            {
+                await JSRuntime.InvokeVoidAsync("showSuccessAlert");
+            }
+            else
+            {
+                await JSRuntime.InvokeVoidAsync("showErrorAlert", string.Join(", ", result.Messages));
+            }
+
         }
         catch (Exception ex)
         {
@@ -85,6 +90,21 @@
         }
     }
 
-    [Inject]
-    private IResetPasswordService resetPasswordService { get; set; }
 }
+<script>
+    function showSuccessAlert() {
+        new window.Swal({
+            icon: 'success',
+            text: 'Password Reset Successfully.',
+            padding: '2em',
+        });
+    }
+    function showErrorAlert(errorMessage) {
+        new window.Swal({
+            icon: 'error',
+            title: 'Error!',
+            text: 'Failed to Reset Password',
+            padding: '2em',
+        });
+    }
+</script>
