--- a/src/UI/Blazor/Modules/Task/Components/CreateTaskModel.razor
+++ b/src/UI/Blazor/Modules/Task/Components/CreateTaskModel.razor
@@ -24,13 +24,13 @@
             <div class="mb-5">
                 <label for="Assignee">Assignee</label>
                 <InputSelect id="Assignee" placeholder="Select Assignee" class="form-select" @bind-Value="TaskDetails.AssignedTo">
-                    <option value="0">Select Status</option>
+                    <option value="0">Select Assignee</option>
                     @foreach (var data in AssigneeList.Data)
                     {
                         <option value="@data.Id">@data.Name</option>
                     }
                 </InputSelect>
-                <ValidationMessage For="@(() => TaskDetails.Status)" />
+                <ValidationMessage For="@(() => TaskDetails.AssignedTo)" />
             </div>
             <div class="mb-5 flex justify-between gap-4">
                 <div class="flex-1">
