changes for small issues

--- a/src/UI/Blazor/App.razor
+++ b/src/UI/Blazor/App.razor
@@ -9,7 +9,9 @@
                         <text>Please wait, we are authorizint the user.</text>
                     </Authorizing>
                     <NotAuthorized>
-                        <text> You are not authorized to access this page. </text>
+                        @{
+                            _navManager.NavigateTo("/"); 
+                        }
                     </NotAuthorized>
                 </AuthorizeRouteView>
             </Found>
