--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -390,13 +390,13 @@
               src="/assets/images/default_profile.png"
               alt=""
             />}@else {
-            <div
-              class="grid h-9 w-9 place-content-center rounded-full bg-gray-300 text-sm font-semibold dark:bg-gray-700 ng-tns-c41-2 ng-star-inserted"
+            <span
+              class="flex h-9 w-9 items-center justify-center rounded-full bg-[#9f80ee] text-white object-cover text-center text-base"
             >
               {{profileFromSignal()?.name?.charAt(0)+ '' +
               profileFromSignal()?.name?.charAt((profileFromSignal()?.name?.indexOf('
-              ')??0) + 1) }}
-            </div>
+              ')??0) + 1) }}</span
+            >
             }
           </button>
           <ul
@@ -414,13 +414,13 @@
                     alt=""
                   />
                   }@else {
-                  <div
-                    class="grid h-10 w-10 place-content-center rounded-full bg-gray-300 text-sm font-semibold dark:bg-gray-700 ng-tns-c41-2 ng-star-inserted"
+                    <span
+                    class="flex h-10 w-10 items-center justify-center rounded-full bg-[#9f80ee] text-white object-cover text-center text-base"
                   >
                     {{profileFromSignal()?.name?.charAt(0)+ '' +
                     profileFromSignal()?.name?.charAt((profileFromSignal()?.name?.indexOf('
-                    ')??0) + 1) }}
-                  </div>
+                    ')??0) + 1) }}</span
+                  >
                   }
                 </div>
                 <div class="truncate ltr:pl-4 rtl:pr-4">
@@ -465,6 +465,37 @@
                   />
                 </svg>
                 Profile
+              </a>
+            </li>
+            <li>
+              <a
+                [routerLink]="chatRoute"
+                *hlMenuItem="let menuItem"
+                class="dark:hover:text-white"
+              >
+                <svg
+                  class="h-4.5 w-4.5 shrink-0 ltr:mr-2 rtl:ml-2"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    opacity="0.5"
+                    d="M2 12C2 8.22876 2 6.34315 3.17157 5.17157C4.34315 4 6.22876 4 10 4H14C17.7712 4 19.6569 4 20.8284 5.17157C22 6.34315 22 8.22876 22 12C22 15.7712 22 17.6569 20.8284 18.8284C19.6569 20 17.7712 20 14 20H10C6.22876 20 4.34315 20 3.17157 18.8284C2 17.6569 2 15.7712 2 12Z"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                  />
+                  <path
+                    d="M6 8L8.1589 9.79908C9.99553 11.3296 10.9139 12.0949 12 12.0949C13.0861 12.0949 14.0045 11.3296 15.8411 9.79908L18 8"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  />
+                </svg>
+
+                Chats
               </a>
             </li>
             <li>
