userInfo state using redux in reactJs and profile page

--- a/src/UI/React/src/tailwind.css
+++ b/src/UI/React/src/tailwind.css
@@ -704,3 +704,10 @@
 pre.hljs {
     @apply p-6 rounded-md overflow-x-auto !bg-[#191e3a];
 }
+
+.disabled-textbox {
+    background-color: #f0f0f0;
+    color: #777;
+    border: 1px solid #ccc;
+    cursor: not-allowed;
+}
