--- a/src/UI/React/src/tailwind.css
+++ b/src/UI/React/src/tailwind.css
@@ -49,6 +49,10 @@
 /* Select2*/
 @import './assets/css/select2.css';
 
+/*mantine-datatable*/
+@import '@mantine/core/styles.layer.css';
+@import 'mantine-datatable/styles.layer.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
